portfolio button fix, spacing and text improvements

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -23,17 +23,18 @@
   text-align: left;
   overflow-y: auto;
   max-height: 90%;
+  position: relative;
 }
 
 .modal-close {
-  position: absolute;
+  position: fixed;
   top: 15px;
   right: 15px;
   background: transparent;
   border: none;
-  font-size: 28px;
+  font-size: 30px;
   font-weight: bold;
-  color: #555;
+  color: white;
   cursor: pointer;
   transition: color 0.3s ease;
 }
@@ -46,18 +47,19 @@
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 10px;
-  color: var(--primary);
+  color: var(--secondary);
 }
 
 .modal-content p {
   font-size: 16px;
   line-height: 1.6;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .modal-content h4 {
   font-size: 18px;
   font-weight: 600;
+  margin-top: 10px;
   margin-bottom: 10px;
   color: var(--secondary);
 }
